@@ -20,18 +20,16 @@ package org.apache.pinot.query.runtime.operator;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.PriorityQueue;
-import javax.annotation.Nullable;
 import org.apache.calcite.rel.RelFieldCollation;
 import org.apache.pinot.common.datablock.DataBlock;
 import org.apache.pinot.common.datatable.StatMap;
 import org.apache.pinot.common.utils.DataSchema;
 import org.apache.pinot.core.query.selection.SelectionOperatorUtils;
-import org.apache.pinot.query.planner.logical.RexExpression;
+import org.apache.pinot.query.planner.plannode.SortNode;
 import org.apache.pinot.query.runtime.blocks.TransferableBlock;
 import org.apache.pinot.query.runtime.operator.utils.SortUtils;
 import org.apache.pinot.query.runtime.plan.OpChainExecutionContext;
@@ -44,53 +42,45 @@ public class SortOperator extends MultiStageOperator {
   private static final String EXPLAIN_NAME = "SORT";
   private static final Logger LOGGER = LoggerFactory.getLogger(SortOperator.class);
 
-  private final MultiStageOperator _upstreamOperator;
-  private final int _fetch;
-  private final int _offset;
+  private final MultiStageOperator _input;
   private final DataSchema _dataSchema;
+  private final int _offset;
+  private final int _numRowsToKeep;
   private final PriorityQueue<Object[]> _priorityQueue;
   private final ArrayList<Object[]> _rows;
-  private final int _numRowsToKeep;
   private final StatMap<StatKey> _statMap = new StatMap<>(StatKey.class);
 
   private boolean _hasConstructedSortedBlock;
-  @Nullable
-  private TransferableBlock _eosBlock = null;
+  private TransferableBlock _eosBlock;
 
-  public SortOperator(OpChainExecutionContext context, MultiStageOperator upstreamOperator,
-      List<RexExpression> collationKeys, List<RelFieldCollation.Direction> collationDirections,
-      List<RelFieldCollation.NullDirection> collationNullDirections, int fetch, int offset, DataSchema dataSchema,
-      boolean isInputSorted) {
-    this(context, upstreamOperator, collationKeys, collationDirections, collationNullDirections, fetch, offset,
-        dataSchema, isInputSorted, SelectionOperatorUtils.MAX_ROW_HOLDER_INITIAL_CAPACITY,
+  public SortOperator(OpChainExecutionContext context, MultiStageOperator input, SortNode node) {
+    this(context, input, node, SelectionOperatorUtils.MAX_ROW_HOLDER_INITIAL_CAPACITY,
         CommonConstants.Broker.DEFAULT_BROKER_QUERY_RESPONSE_LIMIT);
   }
 
   @VisibleForTesting
-  SortOperator(OpChainExecutionContext context, MultiStageOperator upstreamOperator,
-      List<RexExpression> collationKeys, List<RelFieldCollation.Direction> collationDirections,
-      List<RelFieldCollation.NullDirection> collationNullDirections, int fetch, int offset, DataSchema dataSchema,
-      boolean isInputSorted, int defaultHolderCapacity, int defaultResponseLimit) {
+  SortOperator(OpChainExecutionContext context, MultiStageOperator input, SortNode node, int defaultHolderCapacity,
+      int defaultResponseLimit) {
     super(context);
-    _upstreamOperator = upstreamOperator;
-    _fetch = fetch;
-    _offset = Math.max(offset, 0);
-    _dataSchema = dataSchema;
-    _hasConstructedSortedBlock = false;
+    _input = input;
+    _dataSchema = node.getDataSchema();
+    _offset = Math.max(node.getOffset(), 0);
     // Setting numRowsToKeep as default maximum on Broker if limit not set.
     // TODO: make this default behavior configurable.
-    _numRowsToKeep = _fetch > 0 ? _fetch + _offset : defaultResponseLimit;
+    int fetch = node.getFetch();
+    _numRowsToKeep = fetch > 0 ? fetch + _offset : defaultResponseLimit;
     // Under the following circumstances, the SortOperator is a simple selection with row trim on limit & offset:
-    // - There are no collationKeys
-    // - 'isInputSorted' is set to true indicating that the data was already sorted
-    if (collationKeys.isEmpty() || isInputSorted) {
+    // - There is no collation
+    // - Input is already sorted
+    List<RelFieldCollation> collations = node.getCollations();
+    if (collations.isEmpty() || input instanceof SortedMailboxReceiveOperator) {
       _priorityQueue = null;
       _rows = new ArrayList<>(Math.min(defaultHolderCapacity, _numRowsToKeep));
     } else {
       // Use the opposite direction as specified by the collation directions since we need the PriorityQueue to decide
       // which elements to keep and which to remove based on the limits.
       _priorityQueue = new PriorityQueue<>(Math.min(defaultHolderCapacity, _numRowsToKeep),
-          new SortUtils.SortComparator(collationKeys, collationDirections, collationNullDirections, dataSchema, true));
+          new SortUtils.SortComparator(_dataSchema, collations, true));
       _rows = null;
     }
   }
@@ -113,14 +103,13 @@ public class SortOperator extends MultiStageOperator {
 
   @Override
   public List<MultiStageOperator> getChildOperators() {
-    return ImmutableList.of(_upstreamOperator);
+    return List.of(_input);
   }
 
   @Override
   public void cancel(Throwable e) {
   }
 
-  @Nullable
   @Override
   public String toExplainString() {
     return EXPLAIN_NAME;
@@ -166,7 +155,7 @@ public class SortOperator extends MultiStageOperator {
   }
 
   private TransferableBlock consumeInputBlocks() {
-    TransferableBlock block = _upstreamOperator.nextBlock();
+    TransferableBlock block = _input.nextBlock();
     while (block.isDataBlock()) {
       List<Object[]> container = block.getContainer();
       if (_priorityQueue == null) {
@@ -179,8 +168,8 @@ public class SortOperator extends MultiStageOperator {
             _rows.addAll(container.subList(0, _numRowsToKeep - numRows));
             if (LOGGER.isDebugEnabled()) {
               // this operatorId is an old name. It is being kept to avoid breaking changes on the log message.
-              String operatorId = Joiner.on("_")
-                  .join(getClass().getSimpleName(), _context.getStageId(), _context.getServer());
+              String operatorId =
+                  Joiner.on("_").join(getClass().getSimpleName(), _context.getStageId(), _context.getServer());
               LOGGER.debug("Early terminate at SortOperator - operatorId={}, opChainId={}", operatorId,
                   _context.getId());
             }
@@ -193,25 +182,27 @@ public class SortOperator extends MultiStageOperator {
           SelectionOperatorUtils.addToPriorityQueue(row, _priorityQueue, _numRowsToKeep);
         }
       }
-      block = _upstreamOperator.nextBlock();
+      block = _input.nextBlock();
     }
     return block;
   }
 
   public enum StatKey implements StatMap.Key {
+    //@formatter:off
     EXECUTION_TIME_MS(StatMap.Type.LONG) {
       @Override
       public boolean includeDefaultInJson() {
         return true;
       }
     },
-    EMITTED_ROWS(StatMap.Type.LONG),
-    REQUIRE_SORT(StatMap.Type.BOOLEAN) {
+    EMITTED_ROWS(StatMap.Type.LONG), REQUIRE_SORT(StatMap.Type.BOOLEAN) {
       @Override
       public boolean includeDefaultInJson() {
         return true;
       }
     };
+    //@formatter:on
+
     private final StatMap.Type _type;
 
     StatKey(StatMap.Type type) {
